--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,14 +76,14 @@ a:hover { text-decoration: none; }
 
 .coming-soon h2 {
     font-size: 40px;
-    font-weight: 700;
+    font-weight: 700; color: #000;
     text-transform: uppercase;
     text-shadow: 0 1px 7px rgba(0,0,0,.2);
 }
 
 .coming-soon p {
     margin-top: 20px;
-    font-size: 18px;
+    font-size: 18px;color: #088;
     line-height: 36px;
     text-shadow: 0 1px 7px rgba(0,0,0,.2);
 }
